Web Inspector: Dark Mode: Box Model section should have dark background https://bugs.webkit.org/show_bug.cgi?id=186976
Reviewed by Brian Burg.

Replace all instances of black text on white background with the default text and background colors.

* UserInterface/Views/BoxModelDetailsSectionRow.css:
(@media (prefers-dark-interface)):
(.details-section .row.box-model):
(.details-section .row.box-model .label):
(.details-section .row.box-model :matches(.position, .margin, .border, .padding, .content)):
(.details-section .row.box-model:not(.hovered) :matches(.margin, .border, .padding, .content),):
(.details-section .row.box-model .margin):
(.details-section .row.box-model .border):


Canonical link: https://commits.webkit.org/202278@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@233187 268f45cc-cd09-0410-ab3c-d52691b4dbfc

--- a/Source/WebInspectorUI/UserInterface/Views/BoxModelDetailsSectionRow.css
+++ b/Source/WebInspectorUI/UserInterface/Views/BoxModelDetailsSectionRow.css
@@ -108,3 +108,32 @@ body[dir=rtl] .details-section .row.box-model .label {
 .details-section .row.box-model :matches(.right, .left) {
     vertical-align: middle;
 }
+
+@media (prefers-dark-interface) {
+    .details-section .row.box-model {
+        color: var(--text-color);
+    }
+
+    .details-section .row.box-model .label {
+        color: inherit;
+    }
+
+    .details-section .row.box-model :matches(.position, .margin, .border, .padding, .content) {
+        border-color: var(--text-color-quaternary);
+        background-color: var(--background-color);
+        color: var(--text-color);
+    }
+
+    .details-section .row.box-model:not(.hovered) :matches(.margin, .border, .padding, .content),
+    .details-section .row.box-model .active:matches(.margin, .border, .padding, .content) {
+        color: black;
+    }
+
+    .details-section .row.box-model .margin {
+        border-color: var(--text-color-quaternary);
+    }
+
+    .details-section .row.box-model .border {
+        border-color: var(--text-color-quaternary);
+    }
+}
